--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,3 +1,6 @@
-<h1>Songs#index</h1>
-<p>Find me in app/views/songs/index.html.erb</p>
-<%= testing%>
+
+<ul>
+  <% @songs.each do |song| %>
+    <li><%= link_to topic.name, [@artist, @song] %></li>
+  <% end %>
+</ul>
