--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -4,5 +4,7 @@
   <%= f.text_field :name %>
   <%= f.label :rank %>
   <%= f.text_field :rank %>
+  <%= f.label :soundcloud_id %>
+  <%= f.text_field :soundcloud_id %>
   <%= f.submit %>
 <% end %>
