--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,5 +1,12 @@
-<ul>
-  <% @artists.each do |artist| %>
-  <li><%= link_to artist.name, artist %></li>
-  <% end %>
-</ul>
+<h1>Artists</h1>
+<table>
+  <tr>
+    <th>Rank</th>
+    <th>Artist</th>
+  </tr>
+  <tr>
+    <% @artists.each do |artist| %>
+      <td><%= artist.rank %></td>
+      <td><%= link_to artist.name, artist %></td>
+    <% end %>
+</table>
