updates to artist views

--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,12 +1,13 @@
 <h1>Artists</h1>
-<table>
+<table class='artist-list'>
   <tr>
     <th>Rank</th>
     <th>Artist</th>
   </tr>
-  <tr>
     <% @artists.each do |artist| %>
+    <tr>
       <td><%= artist.rank %></td>
       <td><%= link_to artist.name, artist %></td>
+    </tr>
     <% end %>
 </table>
