--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -1,6 +1,5 @@
-// Place all the styles related to the Artists controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import "bootstrap";
+
 
 .artist-list th{
   width: 200;
@@ -9,4 +8,8 @@
 .artist-list td{
   width: 200;
   text-align: center;
+}
+
+.artist-music{
+  background-color: #ff6303;
 }
