--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -1,10 +1,12 @@
-<h1><%= @artist.id ? ('Edit Artist') : ('Create Artist') %></h1>
-<%= form_for @artist do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :rank %>
-  <%= f.text_field :rank %>
-  <%= f.label :soundcloud_id %>
-  <%= f.text_field :soundcloud_id %>
-  <%= f.submit %>
-<% end %>
+<div class='container'>
+  <h1><%= @artist.id ? ('Edit Artist') : ('Create Artist') %></h1>
+  <%= form_for @artist do |f| %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+    <%= f.label :rank %>
+    <%= f.text_field :rank %>
+    <%= f.label :soundcloud_id %>
+    <%= f.text_field :soundcloud_id %>
+    <%= f.submit %>
+  <% end %>
+</div>
