--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,11 +1,13 @@
-<div class='artist-music'>
-  <h1><%= @artist.name %></h1>
-  <iframe
-    width="100%"
-    height="300"
-    scrolling="no"
-    frameborder="no"
-    allow="autoplay"
-    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/<%= @artist.soundcloud_id %>&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
-  </iframe>
+<div class='container'>
+  <div class='artist-music'>
+    <h1><%= @artist.name %></h1>
+    <iframe
+      width="100%"
+      height="300"
+      scrolling="no"
+      frameborder="no"
+      allow="autoplay"
+      src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/<%= @artist.soundcloud_id %>&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
+    </iframe>
+  </div>
 </div>
