--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <%= video_tag "background.mov", autoplay: :autoplay, loop: :loop, mute: :mute, class: "home-video" %>
+    <%= render partial: 'shared/nav' %>
     <%= yield %>
   </body>
 </html>
