--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -7,15 +7,28 @@
 }
 
 .artist-list th{
-  width: 400px;
+  width: 200px;
   text-align: center;
+  font-size: 20px;
 }
 
 .artist-list tbody{
-  width: 400px;
+  width: 200px;
+}
+
+.rank{
+  text-align: center;
+}
+
+.name{
   text-align: center;
 }
 
 .artist-music{
-  background-color: #ff6303;
+  background: rgba(245,250,255,.5);
+}
+
+table.center {
+  margin-left:auto;
+  margin-right:auto;
 }
