add homepage field for aritsts, update nav bar

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,11 +1,11 @@
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-md-12">
-			<ul class="nav">
-				<li class="nav-item">
+<nav class="navbar navbar-expand-lg navbar-dark info-color">
+    <a class="navbar-brand" href="#">Top 100 EDM</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
 					<%= link_to 'Home', root_path %>
-				</li>
-			</ul>
-		</div>
-	</div>
-</div>
+        </ul>
+    </div>
+</nav>
