--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -7,6 +7,8 @@
     <%= f.text_field :rank %>
     <%= f.label :soundcloud_id %>
     <%= f.text_field :soundcloud_id %>
+    <%= f.label :homepage %>
+    <%= f.text_field :homepage %>
     <%= f.submit %>
   <% end %>
 </div>
