--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,11 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark info-color">
-    <a class="navbar-brand" href="#">Top 100 EDM</a>
+    <%= link_to 'Top 100 EDM', root_path, class: 'navbar-brand' %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-					<%= link_to 'Home', root_path %>
-        </ul>
     </div>
 </nav>
