--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,28 @@
 @import 'artists';
 @import 'songs';
 
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    margin: 0 0 50px;
+    padding: 25px;
+}
+
+footer {
+    background-color: #2E2E2E;
+    color: white;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 100px;
+    width: 100%;
+    overflow: hidden;
+}
+
 .nav-item {
   margin-top: 15px;
   color: black;
