--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,5 +13,6 @@
     <%= video_tag "background.mov", autoplay: :autoplay, loop: :loop, mute: :mute, class: "home-video" %>
     <%= render partial: 'shared/nav' %>
     <%= yield %>
+    <%= render partial: 'shared/footer' %>
   </body>
 </html>
