--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.artist-index-body{
+  height: 100%;
+}
+
 .artist-list{
   position: relative;
 }
@@ -31,4 +35,14 @@
 table.center {
   margin-left:auto;
   margin-right:auto;
+}
+
+.overlay {
+    position: fixed;
+    top: 0px;
+    left: 0;
+    z-index: 999;
+    width: 100%;
+    height: 100vh;
+    text-align: center;
 }
