--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -12,7 +12,7 @@
             src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/<%= @artist.soundcloud_id %>&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
           </iframe>
   				<p>
-  					<%= link_to 'Artist Website', @artist.homepage, class: 'btn btn-primary btn-large' %>
+  					<%= link_to 'Artist Website', @artist.homepage, class: 'btn btn-dark btn-large' %>
   				</p>
 			</div>
 		</div>
