update artist text style

--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -1,5 +1,16 @@
 .artist-index-header{
   text-align: center;
+  font-family: "Arial Black", Gadget, sans-serif;
+  font-size: 50px;
+  letter-spacing: -2.2px;
+  word-spacing: 0.6px;
+  color: #000000;
+  font-weight: 700;
+  text-decoration: none;
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
+  margin-bottom: 40px;
 }
 
 .artist-index-body{
