update artist text style

--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -3,7 +3,7 @@
 		<div class="col-md-12">
 			<div class="jumbotron">
 				<div class='artist-index-body'>
-					<h1 class='artist-index-header'>Artists</h1>
+					<h1 class='artist-header'>Artists</h1>
 					<table class='artist-list center'>
 						<thead>
 							<th>Rank</th>
