--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -1,4 +1,4 @@
-.artist-index-header{
+.artist-header{
   text-align: center;
   font-family: "Arial Black", Gadget, sans-serif;
   font-size: 50px;
