--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="jumbotron artist-music">
-          <h1><%= @artist.name %></h1>
+          <h1 class='artist-header'><%= @artist.name %></h1>
           <iframe
             width="100%"
             height="400"
