--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,3 +59,7 @@ footer {
   transform: translateX(-50%) translateY(-50%);
   background-size: cover;
 }
+
+.underline{
+  text-decoration: underline;
+}
