--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -1,5 +1,5 @@
 .artist-header{
-  text-align: center;
+   text-align: center;
   font-family: "Arial Black", Gadget, sans-serif;
   font-size: 50px;
   letter-spacing: -2.2px;
@@ -11,6 +11,7 @@
   font-variant: normal;
   text-transform: none;
   margin-bottom: 40px;
+
 }
 
 .artist-index-body{
@@ -18,6 +19,10 @@
 }
 
 .artist-list{
+  position: relative;
+}
+
+.artist-index{
   position: relative;
 }
 
@@ -48,12 +53,20 @@ table.center {
   margin-right:auto;
 }
 
-.overlay {
-    position: fixed;
-    top: 0px;
-    left: 0;
-    z-index: 999;
-    width: 100%;
-    height: 100vh;
-    text-align: center;
+
+.top-five-songs{
+  text-align: center;
+  margin-left: -30px;
+  height: 100%;
+  -webkit-box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+  box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+  //background: #e8eaed;
+  background: -moz-linear-gradient(top,  #ffa84c 0%, #ff5f03 100%);
+  background: -webkit-linear-gradient(top,  #ffa84c 0%,#ff5f03 100%);
+  background: linear-gradient(to bottom,  #ffa84c 0%,#ff5f03 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa84c', endColorstr='#ff5f03',GradientType=0 );
+}
+
+.t5list{
+  text-align: left;
 }
