--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="artist-index container-fluid">
 	<div class="row">
 		<div class="col-md-12">
 			<div class="jumbotron">
