--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
-	<div class="jumbotron artist-music">
-		<div class="row">
-			<div class="col-md-12">
+	<div class="row">
+		<div class="col-md-9">
+			<div class="jumbotron artist-music">
 				<h1 class='artist-header'><%= @artist.name %></h1>
 				<iframe
 					width="100%"
@@ -9,10 +9,21 @@
 					scrolling="no"
 					frameborder="no"
 					allow="autoplay"
-					src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/<%= @artist.soundcloud_id %>&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+					src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/<%= @artist.soundcloud_id %>&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
+					</iframe>
 				<p>
 					<%= link_to 'Artist Website', @artist.homepage, class: 'btn btn-dark btn-large' %>
 				</p>
+			</div>
+		</div>
+		<div class="col-md-3">
+			<div class='top-five-songs'>
+				<h1 class= 'underline artist-header'>Top 5 Songs</h1>
+			<ol class="t5list">
+				<% @artist.song.each do |song| %>
+					<li><%= song.title %></li>
+				<% end %>
+			</ol>
 			</div>
 		</div>
 	</div>
