--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -18,7 +18,7 @@
 		</div>
 		<div class="col-md-3">
 			<div class='top-five-songs'>
-				<h1 class= 'underline artist-header'>Top 5 Songs</h1>
+				<h1 class= ''>Top 5 Songs</h1>
 			<ol class="t5list">
 				<% @artist.song.each do |song| %>
 					<li><%= song.title %></li>
