--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,9 +16,19 @@
 @import 'songs';
 
 
+body{
+  background: #3f4c6b;
+  background: -moz-linear-gradient(top,  #3f4c6b 0%, #3f4c6b 100%);
+  background: -webkit-linear-gradient(top,  #3f4c6b 0%,#3f4c6b 100%);
+  background: linear-gradient(to bottom,  #3f4c6b 0%,#3f4c6b 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f4c6b', endColorstr='#3f4c6b',GradientType=0 );
+  min-height: 100%;
+  min-width: 100%;
+}
+
 html {
     position: relative;
-    min-height: 100%;
+    margin: 0;
 }
 
 body {
@@ -35,6 +45,7 @@ footer {
     height: 100px;
     width: 100%;
     overflow: hidden;
+    margin-top: 20px;
 }
 
 .nav-item {
@@ -44,6 +55,11 @@ footer {
 
 .navbar{
   background-color: #2E2E2E;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
 }
 
 .home-video{
