--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -1,5 +1,5 @@
 .artist-header{
-   text-align: center;
+  text-align: center;
   font-family: "Arial Black", Gadget, sans-serif;
   font-size: 50px;
   letter-spacing: -2.2px;
@@ -45,6 +45,7 @@
 }
 
 .artist-music{
+  margin-top: 50px;
   background: rgba(245,250,255,.5);
 }
 
@@ -56,11 +57,11 @@ table.center {
 
 .top-five-songs{
   text-align: center;
+  margin-top: 30px;
   margin-left: -30px;
   height: 100%;
   -webkit-box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
   box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
-  //background: #e8eaed;
   background: -moz-linear-gradient(top,  #ffa84c 0%, #ff5f03 100%);
   background: -webkit-linear-gradient(top,  #ffa84c 0%,#ff5f03 100%);
   background: linear-gradient(to bottom,  #ffa84c 0%,#ff5f03 100%);
@@ -69,4 +70,42 @@ table.center {
 
 .t5list{
   text-align: left;
+}
+
+.background-img{
+  overflow: hidden;
+  //transform: scaleX(1.05) translateX(50px);
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 29px;
+  margin-left: -40px;
+  margin-right: -40px;
+}
+
+.top100logo{
+  position: absolute;
+  top: 20%;
+  left: 60%;
+}
+
+.main-background{
+  min-width: 100%;
+  min-height: 100%
+}
+
+.spotify-player{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: sticky;
+  bottom: 0;
+  margin-bottom: 26px;
+}
+.nav-2{
+  justify-content: center;
+  align-items: center;
+  margin-left: -40px;
+  margin-right: 10px;
 }
