--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -103,9 +103,30 @@ table.center {
   bottom: 0;
   margin-bottom: 26px;
 }
+
 .nav-2{
+  display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: -40px;
-  margin-right: 10px;
+  text-align: center;
+  position: absolute;
+  top: 91%;
+  width: 100%;
+  height: 100px;
+  margin-left: 0px;
+  margin-right: -100px;
+  background-color: #2E2E2E;
+  float: left;
+  color: white;
+  display: inline-block;
+}
+
+.nav-2-item{
+  float: left;
+  margin-right: 20px;
+}
+
+.form{
+  margin-bottom: 100px;
+  margin-top: 100px;
 }
