--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,8 +1,10 @@
-
 <div class="artist-index container-fluid">
 	<div class='background-img'>
 		<%= image_tag('background.jpg', :class => 'img-responsive main-background') %>
-			<%= image_tag('edmtop100.png', :class => 'img-responsive top100logo') %>
+		<%= image_tag('edmtop100.png', :class => 'img-responsive top100logo') %>
+		<div class='nav-2'>
+			<p class='nav-2-item'>p1</p><p class='nav-2-item'>p2</p><p class='nav-2-item'>p3</p>
+		</div>
 	</div>
 	<div class="row">
 		<div class="col-md-12">
@@ -21,18 +23,11 @@
 							</tbody>
 						<% end %>
 					</table>
-					</div>
+				</div>
 			</div>
 		</div>
 	</div>
 	<div class='spotify-player'>
-	<iframe
-		src="https://open.spotify.com/embed/playlist/37i9dQZF1E8V4B91dQOtM6"
-		width="2000"
-		height="80"
-		frameborder="0"
-		allowtransparency="true"
-		allow="encrypted-media">
-	</iframe>
+		<iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1E8V4B91dQOtM6" width="2000" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 	</div>
 </div>
