--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -3,26 +3,43 @@
 		<%= image_tag('background.jpg', :class => 'img-responsive main-background') %>
 		<%= image_tag('edmtop100.png', :class => 'img-responsive top100logo') %>
 		<div class='nav-2'>
-			<p class='nav-2-item'>p1</p><p class='nav-2-item'>p2</p><p class='nav-2-item'>p3</p>
+			<p class='nav-2-item'>p1</p>
+			<p class='nav-2-item'>p2</p>
+			<p class='nav-2-item'>p3</p>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-md-12">
 			<div class="jumbotron">
 				<div class='artist-index-body'>
-					<table class='artist-list center'>
-						<h1 class='artist-header'>Artists</h1>
-						<thead>
-							<th>Rank</th>
-							<th>Artist</th>
-						</thead>
-						<% @artists.each do |artist| %>
-							<tbody>
-								<td class='rank'><%= artist.rank %></td>
-								<td class='name'><%= link_to artist.name, artist %></td>
-							</tbody>
-						<% end %>
-					</table>
+					<div class="container marketing">
+						<div class="row">
+							<div class="col-lg-4">
+								<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+								<h2>Heading</h2>
+								<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+								<p>
+									<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
+								</p>
+							</div>
+							<div class="col-lg-4">
+								<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+								<h2>Heading</h2>
+								<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+								<p>
+									<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
+								</p>
+							</div>
+							<div class="col-lg-4">
+								<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+								<h2>Heading</h2>
+								<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+								<p>
+									<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
+								</p>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -31,3 +48,7 @@
 		<iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1E8V4B91dQOtM6" width="2000" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 	</div>
 </div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+<script src="../../../../assets/js/vendor/popper.min.js"></script>
+<script src="../../../../dist/js/bootstrap.min.js"></script>
