--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
-<footer>
-  Devpoint Labs 2019
-  Scott Young
-  Samantha Malay
+<footer class="mastfoot mt-auto">
+  <div class="inner">
+    <p class="app-footer"><%= copyright_generator %></p>
+  </div>
 </footer>
