--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -130,3 +130,9 @@ table.center {
   margin-bottom: 100px;
   margin-top: 100px;
 }
+
+.rounded-circle{
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+}
