implemented tilt js

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -94,3 +94,11 @@ footer {
   align-items: center;
 
 }
+
+.card{
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 400px;
+}
