--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -3,45 +3,44 @@
 		<%= image_tag('background.jpg', :class => 'img-responsive main-background') %>
 		<%= image_tag('edmtop100.png', :class => 'img-responsive top100logo') %>
 	</div>
+	<h1 class='top-3-header'>My Top 3 Artists</h1>
 	<div class="row">
 		<div class="col-md-12">
-			<div class="jumbotron artist-index-body">
 				<div class="row">
-				<div class="col-md-4 tilt tilt-logo" data-tilt="data-tilt" data-tilt-glare="true" data-tilt-scale="1.1">
-					<div class="container card-container">
-						<div class="card">
+					<div class='col-md-1'></div>
+					<div class='col-md-1'></div>
+				<div class="col-md-2 tilt tilt-logo" data-tilt="data-tilt" data-tilt-glare="true" data-tilt-scale="1.1">
+					<div class="container tilt-logo-inner">
 							<%= image_tag('djanime.jpg', :class => "rounded-circle") %>
 							<h2>Dj AniMe</h2>
 							<p>
 								<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
 							</p>
-						</div>
 					</div>
 				</div>
-				<div class="col-md-4 tilt tilt-logo" data-tilt="data-tilt" data-tilt-glare="true" data-tilt-scale="1.1">
-					<div class="container card-container">
-						<div class="card">
+				<div class='col-md-1'></div>
+				<div class="col-md-2 tilt tilt-logo" data-tilt="data-tilt" data-tilt-glare="true" data-tilt-scale="1.1">
+					<div class="container tilt-logo-inner">
 							<%= image_tag('excision.jpg', :class => "rounded-circle") %>
 							<h2>Excision</h2>
 							<p>
 								<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
 							</p>
-						</div>
 					</div>
 				</div>
-				<div class="col-md-4 tilt tilt-logo" data-tilt="data-tilt" data-tilt-glare="true" data-tilt-scale="1.1">
-					<div class="container card-container">
-						<div class="card">
+				<div class='col-md-1'></div>
+				<div class="col-md-2 tilt tilt-logo" data-tilt="data-tilt" data-tilt-glare="true" data-tilt-scale="1.1">
+					<div class="container tilt-logo-inner">
 							<%= image_tag('illenium.jpg', :class => "rounded-circle") %>
 							<h2>Illenium</h2>
 							<p>
 								<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
 							</p>
-						</div>
 					</div>
 				</div>
+				<div class='col-md-1'></div>
+				<div class='col-md-1'></div>
 			</div>
-				</div>
 		</div>
 	</div>
 </div>
