--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,23 +17,16 @@
 
 
 body{
-  background: #3f4c6b;
-  background: -moz-linear-gradient(top,  #3f4c6b 0%, #3f4c6b 100%);
-  background: -webkit-linear-gradient(top,  #3f4c6b 0%,#3f4c6b 100%);
-  background: linear-gradient(to bottom,  #3f4c6b 0%,#3f4c6b 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f4c6b', endColorstr='#3f4c6b',GradientType=0 );
+  background: #1A2B2E;
   min-height: 100%;
   min-width: 100%;
+  margin: 0 0 50px;
+  padding: 25px;
 }
 
 html {
     position: relative;
     margin: 0;
-}
-
-body {
-    margin: 0 0 50px;
-    padding: 25px;
 }
 
 footer {
