--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -173,7 +173,7 @@ table.center {
 }
 
 .jumbotron{
-  background-color: #254742;
+  background-image: linear-gradient(to bottom, #011621, #003e54, #006b6b, #00985a, #14c208);
 }
 
 .top-3-header{
