--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -3,55 +3,51 @@
 		<%= image_tag('background.jpg', :class => 'img-responsive main-background') %>
 		<%= image_tag('edmtop100.png', :class => 'img-responsive top100logo') %>
 	</div>
-	<h1 class='top-3-header'>My Top 3 Artists</h1>
-	<div class="row">
-		<div class="col-md-12">
-				<div class="row">
-					<div class='col-md-1'></div>
-					<div class='col-md-1'></div>
-				<div class="col-md-2 tilt tilt-logo" data-tilt="data-tilt" data-tilt-glare="true" data-tilt-scale="1.1">
-					<div class="container tilt-logo-inner">
-							<%= image_tag('djanime.jpg', :class => "rounded-circle") %>
-							<h2>Dj AniMe</h2>
-							<p>
-								<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-							</p>
-					</div>
+	<div class='jumbotron'>
+		<h1 class='top-3-header'>My Top 3 Artists</h1>
+		<div class="row">
+			<div class='col-md-1'></div>
+			<div class='col-md-1'></div>
+			<div class="col-md-2 tilt tilt-logo" data-tilt="data-tilt" data-tilt-glare="true" data-tilt-scale="1.1">
+				<div class="container tilt-logo-inner">
+					<%= image_tag('djanime.jpg', :class => "rounded-circle") %>
+					<h2>Dj AniMe</h2>
+					<p>
+						<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
+					</p>
 				</div>
-				<div class='col-md-1'></div>
-				<div class="col-md-2 tilt tilt-logo" data-tilt="data-tilt" data-tilt-glare="true" data-tilt-scale="1.1">
-					<div class="container tilt-logo-inner">
-							<%= image_tag('excision.jpg', :class => "rounded-circle") %>
-							<h2>Excision</h2>
-							<p>
-								<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-							</p>
-					</div>
-				</div>
-				<div class='col-md-1'></div>
-				<div class="col-md-2 tilt tilt-logo" data-tilt="data-tilt" data-tilt-glare="true" data-tilt-scale="1.1">
-					<div class="container tilt-logo-inner">
-							<%= image_tag('illenium.jpg', :class => "rounded-circle") %>
-							<h2>Illenium</h2>
-							<p>
-								<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-							</p>
-					</div>
-				</div>
-				<div class='col-md-1'></div>
-				<div class='col-md-1'></div>
 			</div>
+			<div class='col-md-1'></div>
+			<div class="col-md-2 tilt tilt-logo" data-tilt="data-tilt" data-tilt-glare="true" data-tilt-scale="1.1">
+				<div class="container tilt-logo-inner">
+					<%= image_tag('excision.jpg', :class => "rounded-circle") %>
+					<h2>Excision</h2>
+					<p>
+						<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
+					</p>
+				</div>
+			</div>
+			<div class='col-md-1'></div>
+			<div class="col-md-2 tilt tilt-logo" data-tilt="data-tilt" data-tilt-glare="true" data-tilt-scale="1.1">
+				<div class="container tilt-logo-inner">
+					<%= image_tag('illenium.jpg', :class => "rounded-circle") %>
+					<h2>Illenium</h2>
+					<p>
+						<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
+					</p>
+				</div>
+			</div>
+			<div class='col-md-1'></div>
+			<div class='col-md-1'></div>
 		</div>
 	</div>
 </div>
-</div>
 <div class='spotify-player'>
-<iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1E8V4B91dQOtM6" width="2000" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-</div>
+	<iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1E8V4B91dQOtM6" width="2000" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script>
-window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')
+	window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')
 </script>
 <script src="../../../../assets/js/vendor/popper.min.js"></script>
 <script src="../../../../dist/js/bootstrap.min.js"></script>
