--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -172,11 +172,47 @@ table.center {
 	font-size: 1.9rem;
 }
 
-.jumbotron{
+.artist-jumbotron{
   background-image: linear-gradient(to bottom, #011621, #003e54, #006b6b, #00985a, #14c208);
 }
 
 .top-3-header{
   color: white;
   text-align: center;
+  font-family: "Arial Black", Gadget, sans-serif;
+  font-size: 50px;
+  letter-spacing: -2.2px;
+  word-spacing: 0.6px;
+  color: white;
+  font-weight: 700;
+  text-decoration: none;
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
+}
+
+.artist-form{
+  height: 500px;
+}
+
+.form-group{
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.artist-background{
+  max-width: 100%;
+  max-height: 100%;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.soundcloud-iframe{
+  width: 100%;
+  height: 100%;
 }
