--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -3,14 +3,17 @@
 		<div class="col-md-9">
 			<div class="jumbotron artist-music">
 				<h1 class='artist-header'><%= @artist.name %></h1>
-				<iframe
-					width="100%"
-					height="400"
-					scrolling="no"
-					frameborder="no"
-					allow="autoplay"
-					src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/<%= @artist.soundcloud_id %>&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
-					</iframe>
+				<%= image_tag(@artist.background_img, :class => 'artist-background') %>
+				<div class="soundcloud-iframe">
+					<iframe
+						width="100%"
+						height="400"
+						scrolling="no"
+						frameborder="no"
+						allow="autoplay"
+						src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/<%= @artist.soundcloud_id %>&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
+						</iframe>
+				</div>
 				<p>
 					<%= link_to 'Artist Website', @artist.homepage, class: 'btn btn-dark btn-large' %>
 				</p>
