--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -154,13 +154,14 @@ table.center {
   justify-content: center;
   align-items: center;
   text-align: center;
-  background: -moz-linear-gradient(45deg, #008000 0%, #00ffff 100%); /* ff3.6+ */
-  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, #008000), color-stop(100%, #00ffff)); /* safari4+,chrome */
-  background: -webkit-linear-gradient(45deg, #008000 0%, #00ffff 100%); /* safari5.1+,chrome10+ */
-  background: -o-linear-gradient(45deg, #008000 0%, #00ffff 100%); /* opera 11.10+ */
-  background: -ms-linear-gradient(45deg, #008000 0%, #00ffff 100%); /* ie10+ */
-  background: linear-gradient(45deg, #008000 0%, #00ffff 100%); /* w3c */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffff', endColorstr='#008000',GradientType=1 ); /* ie6-9 */
+  background-color: #00bdb0;
+  // background: -moz-linear-gradient(45deg, #008000 0%, #00ffff 100%); /* ff3.6+ */
+  // background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, #008000), color-stop(100%, #00ffff)); /* safari4+,chrome */
+  // background: -webkit-linear-gradient(45deg, #008000 0%, #00ffff 100%); /* safari5.1+,chrome10+ */
+  // background: -o-linear-gradient(45deg, #008000 0%, #00ffff 100%); /* opera 11.10+ */
+  // background: -ms-linear-gradient(45deg, #008000 0%, #00ffff 100%); /* ie10+ */
+  // background: linear-gradient(45deg, #008000 0%, #00ffff 100%); /* w3c */
+  // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffff', endColorstr='#008000',GradientType=1 ); /* ie6-9 */
 }
 
 .tilt-logo-inner {
