--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,8 @@
 
 
 body{
-  background: #011621;
+  background-image: url("/assets/memphis-mini-dark.png");
+  // background: #011621;
   min-height: 100%;
   min-width: 100%;
   margin: 0 0 50px;
@@ -47,7 +48,6 @@ footer {
 }
 
 .navbar{
-  background-color: #2E2E2E;
   position: absolute;
   top: 0;
   left: 0;
