--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -46,7 +46,7 @@
 
 .artist-music{
   margin-top: 50px;
-  background: rgba(245,250,255,.5);
+  background: rgba(245,250,255,1);
 }
 
 table.center {
