--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,3 +63,10 @@ footer {
 .underline{
   text-decoration: underline;
 }
+
+.create-artist{
+  display: flex;
+  align-content: center;
+  text-align: center;
+  color: white;
+}
