--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -1,4 +1,4 @@
-<div class='container'>
+<div class='container jumbotron'>
   <h1><%= @artist.id ? ('Edit Artist') : ('Create Artist') %></h1>
   <%= form_for @artist do |f| %>
     <%= f.label :name %>
