--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,3 +1,4 @@
 <nav class="navbar navbar-expand-lg navbar-dark info-color">
 	<%= link_to 'Top 100 EDM', root_path, class: 'navbar-brand' %>
+	<%= link_to 'Create new Artist', new_artist_path, class: 'create-artist' %>
 </nav>
