--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,9 +1,12 @@
-<h1><%= @sub.id ? 'Edit Sub' : 'Create Song' %></h1>
 
-<%= form_for @song do |f| %>
-  <%= f.label :name %>
-  <%= f.label :title %>
-  <%= f.label :year %>
-  <%= f.text_field :name, required: true, autofocus: true %>
-  <%= f.submit %>
-<% end %>
+<div class='container jumbotron'>
+  <%=binding.pry %>
+  <h1><%= @song.id ? ('Edit Song') : ('Create Song') %></h1>
+  <%= form_for @song do |f| %>
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+    <%= f.label :year %>
+    <%= f.text_field :year %>
+    <%= f.submit %>
+  <% end %>
+</div>
